subprojects {

    group = 'org.bananalaba.jdk24'
    version = "$rev_project"

    apply plugin: 'java'
    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(24)
        }
    }

    sourceCompatibility = '1.24'

    repositories {
        mavenLocal()
        mavenCentral()
        maven {
            url "https://projectlombok.org/edge-releases"
        }
    }

    tasks.withType(JavaCompile).each {
        it.options.compilerArgs.add('--enable-preview')
    }

    test {
        useJUnitPlatform()
        jvmArgs(['--enable-preview'])
    }

    dependencies {
        testImplementation "org.junit.jupiter:junit-jupiter:$rev_junit"
        testImplementation "org.mockito:mockito-core:$rev_mockito"
        testImplementation "org.mockito:mockito-junit-jupiter:$rev_mockito"
        testImplementation "org.assertj:assertj-core:$rev_assertj"

        compileOnly "org.projectlombok:lombok:$rev_lombok"
        annotationProcessor "org.projectlombok:lombok:$rev_lombok"

        testCompileOnly "org.projectlombok:lombok:$rev_lombok"
        testAnnotationProcessor "org.projectlombok:lombok:$rev_lombok"
    }

}
